--- a/Crypto_Portfolio_main.ipynb
+++ b/Crypto_Portfolio_main.ipynb
@@ -422,6 +422,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Summarizing Outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Portfolio Allocation Output"
    ]
   },
@@ -503,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Performance Plot"
+    "### Performance Plot"
    ]
   },
   {
